--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -2,9 +2,26 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300,400');
 $base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Raleway", "Helvetica", "sans-serif";
+$header-font: "Montserrat", "Helvetica", "sans-serif";
+
+// fonts
+$base-size: 15px;
+$header-size: 30px;
+$base-height: 1.4;
+
+// colors
+$brand-color: #D23333;
+$red: #EE5F5B;
+$yellow: #FDB631;
+$green: #32B796;
+$gray: #000000;
+$blue: #20A4F3;
+$orange: #FC8A00;
+
+
+
 
 // Local fonts (uncomment following lines)
 // @font-face {
@@ -17,18 +34,3 @@ $header-font: "Raleway", "Helvetica", "sans-serif";
 // $my-font: "Font Name";
 
 // Font-size and line-height
-$base-size: 16px;
-$base-height: 1.4;
-
-/* -------------------------------------
- * Colors
- * ------------------------------------- */
-// Scheme
-$brand-color: #D23333;
-
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
