--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,34 @@
 .home {
   background-size: cover !important;
-  background-position: top;
-  height: 90vh;
+  background-position: center;
+  height: 85vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-container {
+  text-align: center;
+  background: rgba(10, 10, 10, 0.1);
+  padding: 40px 20px;
+  border-radius: 3px;
+}
+
+.tagline {
+  color: white;
+  font-size: 30px;
+  margin-bottom: 40px;
+}
+
+.home-button {
+  padding: 10px 20px;
+  color: white;
+  background: $orange;
+  border-radius: 2px;
+  transition: all 0.1s ease-in;
+  &:hover {
+    text-decoration: none;
+    color: $orange;
+    background: white;
+  }
 }
