--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
 <div class="home" style="background-image: linear-gradient(-225deg, rgba(32, 164, 243, 0.3) 0%, rgba(252, 138, 0, 0.3) 50%), url(<%= asset_path 'home.jpg' %>);">
+  <div class='text-container'>
+    <h1 class="tagline">Aprende sus verbos irregulares en ingles sin problema</h1>
+    <%= link_to 'Descargar tu lista completa (PDF)', root_path, class: 'home-button' %>
+  </div>
 </div>
