--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,3 +4,14 @@
     <%= link_to 'Descargar tu lista completa (PDF)', root_path, class: 'home-button' %>
   </div>
 </div>
+
+<div class="container">
+  <% @verbs.each do |verb| %>
+    <div class="row">
+      <div class="col-xs-3"> <%= verb.infinitive %> </div>
+      <div class="col-xs-3"> <%= verb.simple_past %> </div>
+      <div class="col-xs-3"> <%= verb.past_participle %> </div>
+      <div class="col-xs-3"> <%= verb.translation %> </div>
+    </div>
+  <% end %>
+</div>
