--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,12 @@
   </div>
 </div>
 
+<% link_to root_path do %>
+  <div class="link-pdf">
+    <p class="link">Descargar tu lista completa gratuitamente (PDF)</p>
+  </div>
+<% end %>
+
 <div class="container">
   <% @verbs.each do |verb| %>
     <div class="row">
