--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="footer">
-  <p>Verbos Irregulares en Ingles © : Learning English irregular verbs becomes hassle-free!</p>
+  <p>Verbos Irregulares en Ingles © : Ahora es fácil aprender los verbos irregulares en ingles</p>
   <p>contact@verbos-irregulares.es</p>
 </div>
