--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,14 +1,15 @@
 .footer {
   margin-top: 6vh;
-  height: 6vh;
   width: 100%;
   background: rgba(10, 10, 10, 0.8);
   padding: 0 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   p {
     color: white;
     font-size: 14px;
+    margin: 8px 0;
   }
 }
