--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="home" style="background-image: linear-gradient(-225deg, rgba(32, 164, 243, 0.3) 0%, rgba(252, 138, 0, 0.3) 50%), url(<%= asset_path 'home.jpg' %>);">
   <div class='text-container'>
-    <h1 class="tagline">Ahora es fácil aprender los verbos irregulares</h1>
+    <h1 class="tagline">Ahora es fácil aprender los verbos irregulares en Ingles</h1>
     <%= link_to 'Descargar tu lista completa (PDF)',
     'https://drive.google.com/file/d/0B_9fzp-RU1lXSmJ1cW4wYXBMcDA/view?usp=sharing',
     class: 'home-button', target: '_blank' %>
@@ -13,6 +13,8 @@
     <p class="link">Descargar tu lista completa gratuitamente (PDF)</p>
   </div>
 <% end %>
+<!-- END -->
+
 
 <div class="container">
   <div class="row">
@@ -42,5 +44,3 @@
     </div>
   </div>
 </div>
-
-
