--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,11 +8,7 @@
 </div>
 
 <!-- NOT DISPLAYED -->
-<% link_to root_path do %>
-  <div class="link-pdf">
-    <p class="link">Descargar tu lista completa gratuitamente (PDF)</p>
-  </div>
-<% end %>
+<% render "pages/shared/cta-pdf" %>
 <!-- END -->
 
 
