--- a/app/views/pages/method.html.erb
+++ b/app/views/pages/method.html.erb
@@ -1,24 +1,70 @@
 <div class="navbar-ph"></div>
 
 <div class="fluid-container">
+
   <div class="row">
     <div class="col-xs-12">
-
-      <div class="method-text-container" id="method-view1">
-        <h1 id='method-title1'>Porque este methodo ?</h1>
-        <p>bla</p>
-        <p>bla</p>
-        <p>bla</p>
-      </div>
-
-      <div class="method-text-container" id="method-view1">
+      <div class="method-title-container">
         <h1 id='method-title1'>Testimonials</h1>
-        <p>bla</p>
-        <p>bla</p>
-        <p>bla</p>
       </div>
-
     </div>
   </div>
-</div>
 
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="method-text-container" id="method-view1">
+        <p>bla</p>
+        <p>bla</p>
+        <p>bla</p>
+      </div>
+
+      <%= render "pages/shared/cta-method" %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="method-title-container">
+        <h1 id='method-title1'>Testimonials</h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="method-text-container" id="method-view1">
+        <p>bla</p>
+        <p>bla</p>
+        <p>bla</p>
+      </div>
+
+      <%= render "pages/shared/cta-method" %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="method-title-container">
+        <h1 id='method-title1'>Testimonials</h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-6">
+      <div class="method-text-container-small">
+        <p>bla</p>
+        <p>bla</p>
+        <p>bla</p>
+      </div>
+    </div>
+    <div class="col-xs-6">
+      <div class="method-text-container-small">
+        <p>bla</p>
+        <p>bla</p>
+        <p>bla</p>
+      </div>
+    </div>
+  </div>
+
+</div>
