--- a/app/assets/stylesheets/pages/_method.scss
+++ b/app/assets/stylesheets/pages/_method.scss
@@ -1,9 +1,24 @@
+// CONTAINER ///////////////////////////////////////////////////////////////////
 .method-text-container {
-  height: 80vh;
+  height: 65vh;
   width: 100%;
   padding: 50px;
 }
 
+.method-text-container-small {
+  height: 60vh;
+  width: 100%;
+  padding: 50px;
+}
+
+.method-title-container {
+  width: 100%;
+  padding-top: 50px;
+  padding-left: 50px;
+}
+
+
+// VIEWS ///////////////////////////////////////////////////////////////////////
 #method-view1 {
   // background: rgba(252, 138, 0, 0.05);
   border-bottom: solid 4px $orange;
@@ -24,4 +39,32 @@
   // border-bottom: solid 20px rgba(252, 138, 0, 0.2);
   background: rgba(32, 164, 243, 0.2);
   display: inline;
+}
+
+// CALL-TO-ACTION /////////////////////////////////////////////////////////////
+.cta-method {
+  height: 6vh;
+  width: 100%;
+  background: $orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  p {
+    color: white;
+  }
+  transition: all 0.2s ease;
+  &:hover {
+    background: $blue;
+    height: 12vh;
+    p {
+      color: white;
+    }
+  }
+}
+
+.avatar-bordered {
+  width: 80px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: $orange 1px solid;
 }
