--- a/app/views/pages/method.html.erb
+++ b/app/views/pages/method.html.erb
@@ -51,15 +51,33 @@
   </div>
 
   <div class="row">
-    <div class="col-xs-6">
+
+    <div class="col-xs-3">
+      <div class="image-container">
+        <%= image_tag 'testimonial-teacher.jpg', class: 'avatar-testimonial' %>
+      </div>
+
+      <div class="testimonial-name">
+        <h2>Beatriz</h2>
+      </div>
+
+      <div class="testimonial-occupation">
+        <h3>Profesora de ingles en Madrid</h2>
+      </div>
+
+    </div>
+
+    <div class="col-xs-3">
       <div class="method-text-container-small">
         <p>bla</p>
         <p>bla</p>
         <p>bla</p>
       </div>
     </div>
-    <div class="col-xs-6">
+
+    <div class="col-xs-3">
       <div class="method-text-container-small">
+        <%= image_tag 'testimonial-man.jpg', class: 'avatar-testimonial' %>
         <p>bla</p>
         <p>bla</p>
         <p>bla</p>
