--- a/app/assets/stylesheets/pages/_method.scss
+++ b/app/assets/stylesheets/pages/_method.scss
@@ -62,9 +62,31 @@
   }
 }
 
-.avatar-bordered {
-  width: 80px;
+// TESTIMONIALS
+.image-container {
+  width: 80%;
+  text-align: center;
+}
+
+.avatar-testimonial {
+  width: 80%;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: $orange 1px solid;
+  border: white 1px solid;
+}
+
+.testimonial-name {
+  width: 100%;
+  text-align: center;
+  color: $orange;
+  h2 {
+    font-size: 22px;
+  }
+}
+.testimonial-occupation {
+  width: 100%;
+  text-align: center;
+  h3 {
+    font-size: 15px;
+  }
 }
