--- a/app/views/pages/method.html.erb
+++ b/app/views/pages/method.html.erb
@@ -42,6 +42,8 @@
     </div>
   </div>
 
+<!-- TESTIMONIALS -->
+
   <div class="row">
     <div class="col-xs-12">
       <div class="method-title-container">
@@ -51,7 +53,6 @@
   </div>
 
   <div class="row">
-
     <div class="col-xs-3">
       <div class="image-container">
         <%= image_tag 'testimonial-teacher.jpg', class: 'avatar-testimonial' %>
@@ -62,24 +63,34 @@
       </div>
 
       <div class="testimonial-occupation">
-        <h3>Profesora de ingles en Madrid</h2>
+        <h3>Profesora de ingles (Madrid)</h3>
       </div>
 
     </div>
 
     <div class="col-xs-3">
-      <div class="method-text-container-small">
-        <p>bla</p>
-        <p>bla</p>
+      <div class="testimonial-text">
         <p>bla</p>
       </div>
     </div>
 
     <div class="col-xs-3">
-      <div class="method-text-container-small">
+      <div class="image-container">
         <%= image_tag 'testimonial-man.jpg', class: 'avatar-testimonial' %>
-        <p>bla</p>
-        <p>bla</p>
+      </div>
+
+      <div class="testimonial-name">
+        <h2>Jorge</h2>
+      </div>
+
+      <div class="testimonial-occupation">
+        <h3>bla bla (Madrid)</h3>
+      </div>
+
+    </div>
+
+    <div class="col-xs-3">
+      <div class="testimonial-text">
         <p>bla</p>
       </div>
     </div>
