I18n in method in progress

--- a/app/views/pages/method.html.erb
+++ b/app/views/pages/method.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="method-title-container">
-        <h1 id='method-title1'>Testimonials</h1>
+        <h1 id='method-title1'> <%= t('method.view1.why') %> </h1>
       </div>
     </div>
   </div>
@@ -13,9 +13,7 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="method-text-container" id="method-view1">
-        <p>bla</p>
-        <p>bla</p>
-        <p>bla</p>
+        <p> <%= t('method.view1.why-text') %> </p>
       </div>
 
       <%= render "pages/shared/cta-method" %>
