--- a/app/views/pages/shared/_cta-method.html.erb
+++ b/app/views/pages/shared/_cta-method.html.erb
@@ -1,5 +1,5 @@
 <%= link_to root_path do %>
   <div class="cta-method">
-    <p>Descargar tu lista completa gratuitamente (PDF)</p>
+    <p> <%= t('method.call-to-action') %> </p>
   </div>
 <% end %>
