Design + SEO tags

--- a/app/views/pages/shared/_cta-pdf.html.erb
+++ b/app/views/pages/shared/_cta-pdf.html.erb
@@ -1,5 +1,5 @@
-<%= link_to root_path do %>
+<%= link_to 'https://drive.google.com/file/d/0B_9fzp-RU1lXSmJ1cW4wYXBMcDA/view?usp=sharing', target: '_blank' do %>
   <div class="cta-pdf">
-    <p>Descargar tu lista completa gratuitamente (PDF)</p>
+    <p> <%= t('home.download-pdf') %> </p>
   </div>
 <% end %>
