--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
       <%= image_tag "logo-white.png" %>
     <% end %>
 
-    <%= link_to 'Verbos Irregulares en Ingles', root_path, class: 'navbar-wagon-link' %>
+    <%= link_to t('navbar.brand'), root_path, class: 'navbar-wagon-link' %>
   </div>
   <!-- side Navigation -->
   <div class="navbar-wagon-side hidden-xs hidden-sm">
