--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 .home {
   background-size: cover !important;
   background-position: 0% 30%;
-  height: 90vh;
+  height: 86vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,7 +10,7 @@
 .text-container {
   text-align: center;
   background: rgba(10, 10, 10, 0.1);
-  padding: 20px;
+  padding: 30px 20px;
   border-radius: 3px;
   margin-top: 50px;
 }
@@ -18,12 +18,14 @@
 .tagline {
   color: white;
   font-size: 30px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .home-button {
-  padding: 10px 20px;
+  padding: 12px 24px;
   color: white;
+  font-family: $header-font;
+  font-size: 16px;
   background: $orange;
   border-radius: 2px;
   transition: all 0.1s ease-in;
@@ -37,12 +39,13 @@
 .cta-pdf {
   height: 6vh;
   width: 100%;
-  background: rgba(10, 10, 10, 0.2);
+  background: rgba(10, 10, 10, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
   p {
-    color: $orange;
+    font-family: $header-font;
+    color: white;
   }
   &:hover {
     background: $orange;
