--- a/app/assets/stylesheets/pages/_method.scss
+++ b/app/assets/stylesheets/pages/_method.scss
@@ -32,13 +32,13 @@
 
 // TITLES //////////////////////////////////////////////////////////////////////
 .method-title1 {
-  background: rgba(252, 138, 0, 0.2);
+  // background: rgba(252, 138, 0, 0.2);
   display: inline;
 }
 
 .method-title2 {
   font-size: 23px;
-  background: rgba(32, 164, 243, 0.2);
+  // background: rgba(32, 164, 243, 0.2);
   display: inline;
   margin: 15px 0 5px 0;
 }
@@ -53,6 +53,7 @@
   align-items: center;
   p {
     color: white;
+    font-family: $header-font;
   }
   transition: all 0.2s ease;
   &:hover {
