--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Verbos Irregulares en Ingles</title>
+    <title>Verbos Irregulares en Inglés</title>
     <%= javascript_tag 'google_analytics' %>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
+    <meta name="description" content="Ahora es fácil aprender los verbos irregulares en Inglés">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= favicon_link_tag 'logo-orange.png' %>
