--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,11 @@
-<div class="home" style="background-image: linear-gradient(-225deg, rgba(32, 164, 243, 0.3) 0%, rgba(252, 138, 0, 0.3) 50%), url(<%= asset_path 'home.jpg' %>);">
+<div class="home" style="background-image: linear-gradient(-225deg, rgba(32, 164, 243, 0.2) 0%, rgba(252, 138, 0, 0.1) 50%), url(<%= asset_path 'home.jpg' %>);">
   <div class='text-container'>
-    <h1 class="tagline">Ahora es fácil aprender los verbos irregulares en Ingles</h1>
-    <%= link_to 'Descargar tu lista completa (PDF)',
-    'https://drive.google.com/file/d/0B_9fzp-RU1lXSmJ1cW4wYXBMcDA/view?usp=sharing',
-    class: 'home-button', target: '_blank' %>
+    <h1 class="tagline"> <%= t('home.baseline') %> </h1>
+    <h2> <%= link_to t('home.call-to-action'), method_path, class: 'home-button' %> </h2>
   </div>
 </div>
 
-<!-- NOT DISPLAYED -->
-<% render "pages/shared/cta-pdf" %>
-<!-- END -->
-
+<%= render "pages/shared/cta-pdf" %>
 
 <div class="container">
   <div class="row">
