--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="fWoROR4y5NC8fDv6CKWm0nv2o7B0zpSYappucRAgyOU" />
     <title>Verbos Irregulares en Inglés</title>
     <%= javascript_tag 'google_analytics' %>
     <%= csrf_meta_tags %>
