--- a/app/views/pages/method.html.erb
+++ b/app/views/pages/method.html.erb
@@ -1,3 +1,33 @@
+<!-- MODAL -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">bla bla</h4>
+      </div>
+      <div class="modal-body">
+        <!-- url: admin_shops_path, method: :post -->
+
+        <%= simple_form_for [@temp_email], url: temp_email_index_path, method: :post do |f| %>
+          <%= f.error_notification %>
+
+          <%= f.input :f_name, label: 'Nombre', placeholder: 'Alejandro' %>
+          <%= f.input :l_name, label: 'Apellido', placeholder: 'Moreno Garcia'%>
+          <%= f.input :email, label: 'Email', placeholder: 'a.moreno-garcia@gmail.com' %>
+          <%= f.submit "Créer", class: "btn btn-success", style: "witdh:100%;" %>
+      <% end %>
+
+      </div>
+<!--       <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div> -->
+    </div>
+  </div>
+</div>
+<!-- END MODAL -->
+
 <div class="navbar-ph"></div>
 
 <div class="fluid-container">
