--- a/app/views/pages/shared/_cta-method.html.erb
+++ b/app/views/pages/shared/_cta-method.html.erb
@@ -1,5 +1,5 @@
-<%= link_to '#' do %>
-  <div class="cta-method pd_js" data-toggle="modal" data-target="#myModal">
+<%= link_to new_temp_email_path do %>
+  <div class="cta-method">
     <p> <%= t('method.call-to-action') %> </p>
   </div>
 <% end %>
