--- a/app/assets/stylesheets/components/_universal.scss
+++ b/app/assets/stylesheets/components/_universal.scss
@@ -15,3 +15,14 @@ a {
 .navbar-ph {
   height: 8vh;
 }
+
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo-form {
+ margin: 40px 0 20px 0;
+ height: 180px;
+}
